[package]
name = "gpupass"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for managing GPU passthrough to virtual machines"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
libc = "0.2"
tempfile = "3"
